--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "ts-node src/index.ts"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
+    "prettier": "3.3.3",
     "ts-node": "10.9.2",
     "typescript": "5.6.2"
   }
